# rust-chess

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
proto/chess/: cell.proto  move_command.proto
src/: board.rs  common.rs  main.rs  positions.rs
src/pieces/: bishop.rs  diagonal_movement.rs  king.rs  knight.rs  mod.rs  parallel_movement.rs  pawn.rs  queen.rs  rook.rs
src/proto/chess/: mod.rs
