[package]
name = "rust-chess"
version = "0.1.0"
authors = ["Dennis Kormalev <kormalev.denis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "^1.5.5"
tokio = {version = "^0.3.0", features = ["full"] }
protobuf = "^2.18.0"
clap = "^2.33.3"
num = "*"
num-derive = "*"
num-traits = "*"
regex = "1"

[build-dependencies]
protoc-rust = "^2.18.0"
